  longer than the wrap margin

+ API Additions

- View.addToolBar(int group, int layer, Component comp) method
  (Mike Dillon)
  - group: one of View.TOP or View.BOTTOM
  - layer: any integer, some predefined constants are in View.java. This
    lets you define the approximate position, from the top or bottom of
    the view, of the tool bar

* Version 4.0pre6

+ New Features

- Enhanced quick copy feature:
  - Dragging with the middle mouse button now creates a selection
    without moving the caret, when the mouse button is released the
    selected text is inserted at the caret position and the selection is
    deactivated
  - A status bar message is shown while middle-dragging to avoid
    confusion
  - This is disabled by default -- enable in Text Area option pane
- Modula-3 syntax highlighting (Marcio Marchini)
- Smalltalk syntax highlighting (Marcio Marchini)

+ Enhancements

- Minor tweaks to VFS path code, that should make things a bit smoother
  for the FTP plugin
- Updated Prolog syntax highlighting (Giulio Piancastelli)
- Hard wrapping is now performed if there is only whitespace between the
  caret and the end of the line
- Pressing the Up or Down arrow when the caret is the first or last line
  of the buffer moves the caret to the beginning and end of the buffer,
  respectively
- Only one 'Search and Replace' dialog can be opened per view. Note that
  due to bugs in the Linux (and probably other Unix) Java
  implementation, the dialog has to be mometarily hidden and shown again
  for this to work
- Favorites menu in file system browser is now sorted using a
  case-insensitive sort
- Improved behavior of 'Plugins' menu when lots of plugins are installed
- Slightly faster scrolling
- Added 'Close' command to file dialog's right-click menu
- Removed funky background token's "paint to end of line" behavior
- Saving a file no longer causes cached token information to be flushed
  (doing this on a save was kind of pointless)